# fci_voice_agent_local

./: .gitignore  README.md  pyproject.toml
_source/: README.md
docs/: 00_INDEX.md
docs/01_survey/: 00_README.md
docs/02_architecture/: 00_README.md  01_fpt_vs_sota.md  02_pipecat_reference_architecture.md  03_livekit_reference_architecture.md  04_testing_and_llm_judge.md  05_langgraph_reference_architecture.md
docs/03_audio_frontend/: 00_README.md
docs/04_asr_telephony/: 00_README.md  01_confidence_clarification.md
docs/05_turn_interruption/: 00_README.md  01_interrupt_taxonomy.md  02_turn_models_and_voice_frontend.md  03_krisp_commercial_reference.md  04_opensource_build_vs_buy.md  05_target_speaker_isolation.md  06_eou_endpointing.md  07_bargein_decision.md
docs/06_llm_agent/: 00_README.md  01_orchestration_state.md  02_tool_call_grounding.md  03_tool_calling_stages.md  04_tool_call_frameworks.md  05_cskh_domains.md  06_financial_law_knowledge.md
docs/07_guardrails/: 00_README.md
docs/08_datasets/: 00_README.md  01_eda_methodology.md  02_sim_to_real_data.md  03_training_recipes.md
docs/09_benchmarks/: 00_README.md
docs/10_implementation/: 00_README.md  01_architecture.md  02_e2e_report.md
docs/11_sim_test_system/: 00_README.md  01_design.md  02_gym_env_and_roles.md  03_structured_decoding.md  04_turn_detection.md
docs/12_presentation/: 00_deck_voice_agent.md  01_deck_customer_first.md  02_slides_fci_customer_first.md
docs/13_delivery_plan/: 00_overview.md  01_fci_info_requests.md  02_priority_shortlist.md  (+1 more)
experiments/09_asr_noise_verifier/: README.md  RESULTS.md  pyproject.toml  run_kaggle_fastconformer.py
experiments/09_asr_noise_verifier/src/: build_dataset.py  fastconformer_noise_ft.py  noise_gen.py  verify_asr.py
experiments/09_asr_noise_verifier/src/fc_noise_ft/: __init__.py  audio.py  cli.py  config.py  datasets.py  eval.py  hf_io.py  manifests.py  nemo_runner.py  pipeline.py  text_norm.py  vivos_data.py
notebooks/: fastconformer_vivos_noise_finetune_local_kaggle.ipynb
(+147 files in other folders)
