[project]
name = "phase0-noise-verifier"
version = "0.1.0"
description = "Phase 0 - deterministic synthetic-noise generator + ASR verifier (PhoWhisper)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<2.2",
    "scipy>=1.11",
    "soundfile>=0.12",
    "librosa>=0.10",
    "jiwer>=3.0",
    "transformers>=4.40",
    "torch>=2.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
